add unit tests, create a pull request workflow, add custom user agent, and some other minor tweaks

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,9 @@ builds:
       - windows
       - darwin
       - freebsd
+    ldflags:
+      -  -s -w
+      - -X github.com/wwsean08/gh-gh-status/status.Version={{.Version}}
 archives:
   - format: binary
     name_template: "{{ .Os }}-{{ .Arch }}"
