--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/go,jetbrains+all,visualstudiocode
 
-gh-status
+gh-gh-status
 dist/
